refacto: ♻️ Reorder scripts number after using file templates